# listenalong

./: Dockerfile  LICENSE  build-lambda.sh  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  manage.py  pyproject.toml  user.go
.github/workflows/: django.yaml  lambda.yaml
api/: user.go  views.go
cmd/lambda/: main.go
cmd/serve/: main.go
django/: pyproject.toml
django/listenalong/: lambda.py  settings.py  wsgi.py
django/player/: models.py  tests.py  urls.py  views.py
django/player/management/commands/: start_scheduler.py  update_room.py
django/player/templates/player/: index.html  room_detail.html
django/terraform/: s3.tf
go/: Dockerfile  auth.go  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  main.go  user.go  views.go
go/templates/: login.html
go/templates/layout/: base.html
go/terraform/: api_gateway.tf  iam.tf  lambda.tf  s3.tf
listenalong/: asgi.py  settings.py  urls.py
player/: admin.py  models.py  tests.py  urls.py  views.py
player/management/commands/: start_scheduler.py
player/migrations/: 0001_initial.py  0002_room_item_duration_ms.py
player/templates/player/: base.html  index.html  login.html  room_detail.html
templates/: index.html  login.html
terraform/: iam.tf  secretsmanager.tf
