[tool.poetry]
name = "listenalong"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
social-auth-app-django = "^3.1.0"
django-environ = "^0.4.5"
tekore = "^1.7.0"
schedule = "^0.6.0"
serverless-wsgi = "^1.7.4"
django-s3-sqlite = "^0.0.3"
boto3 = "^1.13.19"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
ipdb = "^0.13.2"
factory_boy = "^2.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
